--- a/antlr3.gradle
+++ b/antlr3.gradle
@@ -1,26 +1,26 @@
 import java.nio.file.Paths;
 import org.gradle.api.tasks.JavaExec;
 
-ext.antlr = [
+ext.antlr3 = [
     antlrSource: 'src/main/antlr3',
     destinationDir: "src/generated-sources/antlr3"
 ]
 
-task antlrOutputDir << {
-	mkdir(antlr.destinationDir)
+task antlr3OutputDir << {
+	mkdir(antlr3.destinationDir)
 }
 
-task generateGrammarSource(dependsOn: antlrOutputDir) {
+task antlr3(dependsOn: antlr3OutputDir) {
 	description = 'Generates Java sources from Antlr3 grammars.'
 
-	inputs.dir file(antlr.antlrSource)
-	outputs.dir file(antlr.destinationDir)
+	inputs.dir file(antlr3.antlrSource)
+	outputs.dir file(antlr3.destinationDir)
 
-	def grammars = fileTree(antlr.antlrSource).include('**/*.g')
+	def grammars = fileTree(antlr3.antlrSource).include('**/*.g')
 
 	grammars.files.each {File grammarFile ->
 		java.nio.file.Path grammar = Paths.get(grammarFile.absolutePath)
-		java.nio.file.Path base = Paths.get(new File(antlr.antlrSource).absolutePath)
+		java.nio.file.Path base = Paths.get(new File(antlr3.antlrSource).absolutePath)
 		java.nio.file.Path relPath = base.relativize(grammar)
 		File relFile = relPath.toFile()
 		String pkgDir = relFile.getParentFile()
@@ -31,12 +31,12 @@ task generateGrammarSource(dependsOn: antlrOutputDir) {
 				main = 'org.antlr.Tool'
 				classpath = configurations.compile
 				
-				args = ["-o", "${antlr.destinationDir}/${pkgDir}", grammarFile].flatten()
+				args = ["-o", "${antlr3.destinationDir}/${pkgDir}", grammarFile].flatten()
 			}
 		}
 	}	
 }
 
-compileJava.dependsOn generateGrammarSource
-sourceSets.main.java.srcDirs += antlr.destinationDir
+compileJava.dependsOn antlr3
+sourceSets.main.java.srcDirs += antlr3.destinationDir
 
