--- a/antlr4.gradle
+++ b/antlr4.gradle
@@ -25,19 +25,21 @@ task antlr4Task(dependsOn: antlr4OutputDir) {
 		File relFile = relPath.toFile()
 		String pkgDir = relFile.getParentFile()
 		String pkg = pkgDir.toString().replace(File.separator, '.')
-		
-		doLast {
-			  javaexec {
-				main = 'org.antlr.v4.Tool'
-				classpath = configurations.compile
-				
-				args = ["-o", "${antlr4.destinationDir}/${pkgDir}", grammarFile]
-				if(antlr4.options != null)
-				    args.add(antlr4.options);
-				args = args.flatten()
-			}
-		}
-	}	
+
+        doLast {
+            javaexec {
+                main = 'org.antlr.v4.Tool'
+                classpath = configurations.compile
+
+                args = ["-o", "${antlr4.destinationDir}/${pkgDir}", grammarFile]
+
+                if(antlr4.options != null)
+                    args += antlr4.options;
+
+                args = args.flatten()
+            }
+        }
+    }
 }
 
 compileJava.dependsOn antlr4Task
